<resources>
    <string name="app_name" translatable="false">MobFinder</string>

    <string name="vendor_label">Company</string>

    <string name="vendor_apple" translatable="false">Apple</string>
    <string name="vendor_google" translatable="false">Google</string>
    <string name="vendor_samsung" translatable="false">Samsung</string>
    <string name="vendor_htc" translatable="false">HTC</string>

    <string name="no_network_message">No Network &amp; favorites</string>
    <string name="offline_message">Offline</string>
    <string name="offline_message_with_action">Offline - Press to load favorites if there</string>

    <string name="refresh">Refresh</string>

    <string-array name="vendors">
        <item>@string/vendor_apple</item>
        <item>@string/vendor_google</item>
        <item>@string/vendor_samsung</item>
        <item>@string/vendor_htc</item>
    </string-array>

    <!-- MobileDetailsActivity related -->

    <string name="mobile_details_activity_title" translatable="false">MobileDetailsActivity</string>
    <string name="mobile_details_image_content_desc">Mobile Image</string>
    <string name="mobile_details_content_desc_screen_size">Screen Size</string>
    <string name="mobile_details_content_desc_camera">Camera</string>
    <string name="mobile_details_content_desc_android_os">Android OS</string>
    <string name="mobile_details_title_display" translatable="false">Display</string>
    <string name="mobile_details_physical_size" translatable="false">Size:</string>
    <string name="mobile_details_resolution" translatable="false">Resolution:</string>
    <string name="mobile_details_pixels" translatable="false">Density:</string>
    <string name="mobile_details_title_hardware" translatable="false">Hardware</string>
    <string name="mobile_details_chipset" translatable="false">Chipset:</string>
    <string name="mobile_details_graphics" translatable="false">Graphics:</string>
    <string name="mobile_details_memory" translatable="false">Memory:</string>
    <string name="mobile_details_title_camera" translatable="false">Camera</string>
    <string name="mobile_details_rear_camera" translatable="false">Rear camera:</string>
    <string name="mobile_details_front_camera" translatable="false">Front camera:</string>

    <!-- SettingsActivity related -->

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_key_brand" translatable="false">brand</string>
    <string name="pref_title_brand">Default Brand</string>
    <string name="pref_default_brand" translatable="false">0</string>
    <string-array name="pref_brand_values"  translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_default_no_mobiles" translatable="false">10</string>
    <string name="pref_key_no_mobiles" translatable="false">no_mobiles</string>
    <string name="pref_title_no_mobiles">Maximum Requested Mobiles</string>
    <string name="pref_error_msg_for_no_mobiles">Illegal Number Format, Maximum Requested Mobiles range is 10 – 100</string>

    <!-- Connectivity settings -->
    <string name="pref_header_connectivity">Connectivity</string>

    <string name="pref_title_network_type">Operate Over</string>
    <string name="pref_key_network_type" translatable="false">network_type</string>
    <string name="pref_default_network_type" translatable="false">1</string>
    <string-array name="pref_entries_network_types" translatable="false">
        <item>Wifi</item>
        <item>Wifi &amp; cellular</item>
    </string-array>
    <string-array name="pref_values_network_types" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- string formats -->

    <string name="display_size_header_format" translatable="false">%s\"</string>
    <string name="display_size_content_format" translatable="false">%s inches</string>
    <string name="resolution_format" translatable="false">%s pixels</string>
    <string name="rear_camera_format" translatable="false">%s MP</string>
    <string name="front_camera_format" translatable="false">%s front</string>

    <!-- Content Description -->
    <string name="content_description_fav_button">Mark as Favorite</string>
    <string name="content_description_share_button">Share it</string>
</resources>
