<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/pref_default_brand"
        android:entries="@array/vendors"
        android:entryValues="@array/pref_brand_values"
        android:key="@string/pref_key_brand"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_brand" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_no_mobiles"
        android:key="@string/pref_key_no_mobiles"
        android:title="@string/pref_title_no_mobiles" />
</PreferenceScreen>
