<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_radius">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_mobile_img"
            android:layout_width="@dimen/card_img_width"
            android:layout_height="@dimen/card_img_height"
            android:layout_marginEnd="@dimen/card_img_margin"
            android:layout_marginStart="@dimen/card_img_margin"
            android:layout_marginTop="@dimen/card_img_margin"
            android:contentDescription="@string/mobile_details_image_content_desc"
            android:elevation="@dimen/card_img_elevation"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_samsung_logo" />

        <TextView
            android:id="@+id/tv_mobile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/card_title_margin"
            android:layout_marginStart="@dimen/card_title_margin"
            android:textColor="@color/card_title"
            android:textSize="@dimen/card_title_size"
            app:layout_constraintEnd_toStartOf="@+id/iv_mobile_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_mobile_img"
            tools:text="Pixel 2" />

        <TextView
            android:id="@+id/tv_mobile_vendor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="@dimen/card_second_text_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/card_second_text_color"
            android:textSize="@dimen/card_second_text_size"
            app:layout_constraintEnd_toStartOf="@+id/iv_mobile_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_mobile_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_name"
            tools:text="Google" />

        <ImageButton
            android:id="@+id/ib_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_action_margin"
            android:layout_marginTop="@dimen/card_action_margin"
            android:background="@null"
            android:contentDescription="@string/content_description_fav_button"
            android:paddingBottom="@dimen/card_action_padding"
            android:paddingEnd="@dimen/card_action_padding"
            android:paddingStart="@dimen/card_action_padding_start"
            android:paddingTop="@dimen/card_action_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_vendor"
            app:srcCompat="@drawable/ic_favorite_border" />

        <ImageButton
            android:id="@+id/ib_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_action_margin"
            android:layout_marginStart="@dimen/card_action_margin"
            android:background="@null"
            android:contentDescription="@string/content_description_share_button"
            android:paddingBottom="@dimen/card_action_padding"
            android:paddingEnd="@dimen/card_action_padding"
            android:paddingStart="@dimen/card_action_padding"
            android:paddingTop="@dimen/card_action_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_favorite"
            app:layout_constraintTop_toTopOf="@+id/ib_favorite"
            app:srcCompat="@drawable/ic_share" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>